--- a/obsidian.css
+++ b/obsidian.css
@@ -1,8 +1,8 @@
 :root
 {
-    --dark0:  #181f21;
-    --dark1:  #22292b;
-    --dark2:  #3b4244;
+    --dark0:  #141b1e;
+    --dark1:  #232a2d;
+    --dark2:  #2d3437;
     --dark3:  #454c4e;
     --darker: #131a1c;
 
