fix and update the theme

--- a/obsidian.css
+++ b/obsidian.css
@@ -1,67 +1,63 @@
 :root
 {
-    --dark0:  #141b1e;
-    --dark1:  #232a2d;
-    --dark2:  #2d3437;
+    --dark0:  #0f1619;
+    --dark1:  #141b1e;
+    --dark2:  #1e2528;
     --dark3:  #454c4e;
-    --darker: #131a1c;
+    --darker: #0a1114;
 
     --light0: #cbcbcb;
     --light1: #d0d0d0;
     --light2: #d5d5d5;
     --light3: #dadada;
 
-    --frost0: #62abe3;
-    --frost1: #71baf2;
-    --frost2: #67b0e8;
-    --frost3: #7bc4fc;
-
     --red:    #e06e6e;
     --orange: #f3a368;
     --yellow: #e5c76b;
     --green:  #8ccf7e;
     --purple: #c47fd5;
-
+    --lavender: #bab3e5;
+    --teal: #9bdead;
 }
 
 .theme-dark
 {
     --background-primary:         var(--dark0);
-    --background-primary-alt:     var(--dark0);
+    --background-primary-alt:     var(--dark2);
     --background-secondary:       var(--darker);
     --background-secondary-alt:   var(--dark1);
     --text-normal:                var(--light2);
     --text-faint:                 var(--light0);
     --text-muted:                 var(--light1);
     --text-title-h1:              var(--red);
-    --text-title-h2:              var(--orange);
+    --text-title-h2:              var(--blue);
     --text-title-h3:              var(--yellow);
     --text-title-h4:              var(--green);
-    --text-title-h5:              var(--purple);
-    --text-title-h6:              var(--orange);
-    --text-link:                  var(--frost0);
-    --text-a:                     var(--frost3);
-    --text-a-hover:               var(--frost2);
-    --text-mark:                  rgba(136, 192, 208, 0.3); /* frost1 */
-    --pre-code:                   var(--dark1);
-    --text-highlight-bg:          rgba(163, 190, 140, 0.3); /* green */
+    --text-title-h5:              var(--lavender);
+    --text-title-h6:              var(--teal);
+    --text-link:                  var(--blue);
+    --text-a:                     var(--blue);
+    --text-a-hover:               var(--dark3);
+    --text-mark:                  var(--lavender);
+    --pre-code:                   var(--dark3);
+    --text-highlight-bg:          var(--lavender);
     --text-highlight-bg-active:   var(--green);
-    --interactive-accent:         var(--frost0);
+    --interactive-accent:         var(--lavender);
     --interactive-before:         var(--dark2);
-    --background-modifier-border: var(--dark2);
-    --text-accent:                var(--orange);
-    --interactive-accent-rgb:     var(--orange);
-    --inline-code:                var(--frost1);
-    --code-block:                 var(--frost1);
+    --background-modifier-border: var(--dark0);
+    --text-accent:                var(--teal);
+    --interactive-accent-rgb:     var(--teal);
+    --inline-code:                var(--yellow);
+    --code-block:                 var(--lavender);
     --vim-cursor:                 var(--orange);
     --text-selection:             var(--dark3);
-    --text-tag:                   var(--frost0);
-    --task-checkbox:              var(--frost0);
+    --text-tag:                   var(--teal);
+    --task-checkbox:              var(--teal);
 }
 .theme-light
 {
     --background-primary:         var(--light3);
-    --background-primary-alt:     var(--light3);
+    --background-primary-alt:     var(--light2);
     --background-secondary:       var(--light2);
     --background-secondary-alt:   var(--light1);
     --text-normal:                var(--dark1);
@@ -73,12 +69,12 @@
     --text-title-h4:              var(--green);
     --text-title-h5:              var(--purple);
     --text-title-h6:              var(--orange);
-    --text-link:                  var(--frost0);
-    --text-a:                     var(--frost3);
-    --text-a-hover:               var(--frost1);
-    --text-mark:                  rgba(136, 192, 208, 0.3); /* frost1 */
+    --text-link:                  var(--blue);
+    --text-a:                     var(--blue);
+    --text-a-hover:               var(--blue);
+    --text-mark:                  var(--dark3);
     --pre-code:                   var(--light2);
-    --text-highlight-bg:          rgba(235, 203, 139, 0.6); /* yellow */
+    --text-highlight-bg:          var(--purple); 
     --text-highlight-bg-active:   var(--yellow);
     --interactive-accent:         var(--frost0);
     --interactive-before:         var(--light0);
@@ -87,10 +83,10 @@
     --interactive-accent-rgb:     var(--orange);
     --inline-code:                var(--frost1);
     --code-block:                 var(--frost1);
-    --vim-cursor:                 var(--orange);
+    --vim-cursor:                 var(--purple);
     --text-selection:             var(--light0);
-    --text-tag:                   var(--frost2);
-    --task-checkbox:              var(--frost0);
+    --text-tag:                   var(--teal);
+    --task-checkbox:              var(--teal);
 }
 
 :root {
@@ -164,7 +160,7 @@ a:hover,
 .cm-url
 {
     color: var(--text-a-hover) !important;
-    text-decoration: none !important;
+    text-decoration: underline !important;
 }
 
 a.tag, a.tag:hover {
@@ -522,7 +518,7 @@ input.task-list-item-checkbox:checked {
 
 .mermaid .note
 {
-    fill: var(--frost3) !important;
+    fill: var(--blue) !important;
 }
 
 .setting-item-control input[type="text"] {
